Kubenetes Configurations/api-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: default
  labels:
    app: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: api-gateway
        tier: backend
    spec:
      containers:
        - name: api-gateway
          image: amitchavda00/api-gateway:1.0
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: default
spec:
  selector:
    app: api-gateway
    tier: backend
  ports:
    - name: api-gateway
      protocol: TCP
      port: 5000
      targetPort: 5000
