Kubenetes Configurations/category-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category-service
  namespace: default
  labels:
    app: category-service
spec:
  selector:
    matchLabels:
      app: category-service
  replicas: 1
  template:
    metadata:
      labels:
        app: category-service
    spec:
      containers:
        - name: category-service
          image: amitchavda00/category-service:1.0
          ports:
            - containerPort: 5002
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: category-service
  namespace: default
spec:
  selector:
    app: category-service
  ports:
    - name: category-service
      protocol: TCP
      port: 5002
      targetPort: 5002
