Kubenetes Configurations/mongodb-service.yaml
#headless service
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: default
  labels:
    app: mongo-service
spec:
  ports:
    - port: 27017
  clusterIP: None
  selector:
    app: mongo-service

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: default
spec:
  selector:
    matchLabels:
      app: mongo-service
  serviceName: "mongo-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo-service
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-pvc
              mountPath: /mnt/data
  volumeClaimTemplates:
    - metadata:
        name: mongo-pvc
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
