Kubenetes Configurations/mysql-service.yaml
#headless service
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: default
  labels:
    app: mysql-service
spec:
  ports:
    - port: 3306
  clusterIP: None
  selector:
    app: mysql-service

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: default
spec:
  selector:
    matchLabels:
      app: mysql-service
  serviceName: "mysql-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-service
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-pvc
              mountPath: /mnt/data
  volumeClaimTemplates:
    - metadata:
        name: mysql-pvc
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
