Kubenetes Configurations/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  namespace: default
spec:
  rules:
    - host: demo.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eureka-server
                port:
                  number: 7001
          - path: /category
            pathType: Prefix
            backend:
              service:
                name: category-service
                port:
                  number: 5002
          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 5003
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 5001
